[package]
name = "bridge-v1-node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.23.1"
hex = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = {version = "0.19", features = ["recovery"] }
ethereum-types = "0.9"
mongodb = "1.2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
