[package]
name = "bridge-v1-node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.23.1"
hex = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = {version = "0.19", features = ["recovery"] }
ethereum-types = "0.9"
mongodb = "2.1.0"
tokio = { version = "1.15.0", features = ["full"] }
#tokio = { version = "0.2.25", features = ["full"] }
tokio-stream = "0.1.8"
async-trait = "0.1.51"
structopt = "0.3"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12.0"
sha2 = "0.10.0"
rand = "0.8.4"
aes-gcm = "0.9.4"
